# get-netrc

./: .codeclimate.yml  LICENSE  README.md  circle.yml  get-netrc.cabal  package.yaml  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/: GetNetRc.hs  Lib.hs
src/GetNetRc/: Format.hs  GPG.hs  Options.hs  Types.hs
src/Lib/: Format.hs  GPG.hs  Options.hs  Types.hs
test/: GetNetRcSpec.hs  LibSpec.hs  Spec.hs
test/GetNetRc/: FormatSpec.hs
test/Lib/: FormatSpec.hs
