name:                get-netrc
version:             0.1.0.0
synopsis:            Read values out of ~/.netrc
description:         Please see README.md
homepage:            https://github.com/pbrisbin/get-netrc#readme
license:             MIT
license-file:        LICENSE
author:              Pat Brisbin
maintainer:          pbrisbin@gmail.com
copyright:           2016 Pat Brisbin
category:            Tools
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     Lib
                       Lib.Format
                       Lib.GPG
                       Lib.Options
                       Lib.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , netrc
                     , optparse-applicative
                     , process
  default-language:    Haskell2010

executable get-netrc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , get-netrc
                     , bytestring
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , get-netrc
                     , bytestring
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbrisbin/get-netrc
